Finished v1.0 Web API
