# service/api/api-photos.go
@@ -1,40 +1,27 @@
 package api
 
 import (
+	"github.com/aleiis/WASAPhoto/service/api/reqcontext"
+	"github.com/aleiis/WASAPhoto/service/database"
+	"github.com/julienschmidt/httprouter"
 	"image"
 	"net/http"
-	"strconv"
-
-	"github.com/aleiis/WASAPhoto/service/api/reqcontext"
-	"github.com/julienschmidt/httprouter"
 )
 
 func (rt *_router) uploadPhotoHandler(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
 
-	id := ps.ByName("userId")
-
-	bearer := r.Header.Get("Authorization")
-
-	if bearer != id {
-		w.WriteHeader(http.StatusUnauthorized)
-		return
-	}
-
-	// Check if the user ID is a valid int64
-	userId, err := strconv.ParseInt(id, 10, 64)
-	if err != nil {
+	// Get the parameters
+	var userId int64
+	if params, err := checkIds(ps.ByName("userId")); err != nil {
 		w.WriteHeader(http.StatusBadRequest)
 		return
+	} else {
+		userId = params[0]
 	}
 
-	// Check if the user exists
-	exists, err := rt.db.UserIdExists(userId)
-	if err != nil {
-		ctx.Logger.WithError(err).Error("can't check if the user exists")
-		w.WriteHeader(http.StatusInternalServerError)
-		return
-	} else if !exists {
-		w.WriteHeader(http.StatusNotFound)
+	// Authorization check
+	if !checkBearer(r.Header.Get("Authorization"), userId) {
+		w.WriteHeader(http.StatusUnauthorized)
 		return
 	}
 
@@ -57,9 +44,14 @@ func (rt *_router) uploadPhotoHandler(w http.ResponseWriter, r *http.Request, ps
 	// Try to upload the photo
 	err = rt.db.UploadPhoto(userId, img, format)
 	if err != nil {
-		ctx.Logger.WithError(err).Error("can't upload the photo")
-		w.WriteHeader(http.StatusInternalServerError)
-		return
+		if err == database.ErrUserNotFound {
+			w.WriteHeader(http.StatusNotFound)
+			return
+		} else {
+			ctx.Logger.WithError(err).Error("can't upload the photo")
+			w.WriteHeader(http.StatusInternalServerError)
+			return
+		}
 	}
 
 	w.WriteHeader(201)
@@ -67,47 +59,32 @@ func (rt *_router) uploadPhotoHandler(w http.ResponseWriter, r *http.Request, ps
 
 func (rt *_router) deletePhotoHandler(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
 
-	strUserId := ps.ByName("userId")
-	strPhotoId := ps.ByName("photoId")
+	// Get the parameters
+	var userId, photoId int64
+	if params, err := checkIds(ps.ByName("userId"), ps.ByName("photoId")); err != nil {
+		w.WriteHeader(http.StatusBadRequest)
+		return
+	} else {
+		userId = params[0]
+		photoId = params[1]
+	}
 
-	bearer := r.Header.Get("Authorization")
-
-	if bearer != strUserId {
+	// Authorization check
+	if !checkBearer(r.Header.Get("Authorization"), userId) {
 		w.WriteHeader(http.StatusUnauthorized)
 		return
 	}
 
-	// Check if the user ID is a valid int64
-	userId, err := strconv.ParseInt(strUserId, 10, 64)
-	if err != nil {
-		w.WriteHeader(http.StatusBadRequest)
-		return
-	}
-
-	// Check if the photo ID is a valid int64
-	photoId, err := strconv.ParseInt(strPhotoId, 10, 64)
-	if err != nil {
-		w.WriteHeader(http.StatusBadRequest)
-		return
-	}
-
-	// Check if the photo exists
-	exists, err := rt.db.PhotoExists(userId, photoId)
-	if err != nil {
-		ctx.Logger.WithError(err).Error("can't check if the photo exists")
-		w.WriteHeader(http.StatusInternalServerError)
-		return
-	} else if !exists {
-		w.WriteHeader(http.StatusNotFound)
-		return
-	}
-
 	// Try to delete the photo
-	err = rt.db.DeletePhoto(userId, photoId)
-	if err != nil {
-		ctx.Logger.WithError(err).Error("can't delete the photo")
-		w.WriteHeader(http.StatusInternalServerError)
-		return
+	if err := rt.db.DeletePhoto(userId, photoId); err != nil {
+		if err == database.ErrPhotoNotFound {
+			w.WriteHeader(http.StatusNotFound)
+			return
+		} else {
+			ctx.Logger.WithError(err).Error("can't delete the photo")
+			w.WriteHeader(http.StatusInternalServerError)
+			return
+		}
 	}
 
 	w.WriteHeader(200)
